--- a/src/components/DynamicLists/DynamicLists.module.css
+++ b/src/components/DynamicLists/DynamicLists.module.css
@@ -4,21 +4,24 @@ ul.dynamic_lists {
   margin-left: 1.5rem;
   color: #c7dfff;
   font-family: "Montserrat", sans-serif;
+  user-select: none;
 }
 
 ul.dynamic_lists > li {
   /* background-color: rgba(127, 255, 212, 0.264); */
-  margin: 0px 10px 0px 0px;
-  padding: 10px;
-  border-radius: 5px;
+  margin: 0px 20px 0px 0px;
+  padding: 8px 10px;
+  border-radius: 6px;
   display: flex;
   gap: 5px;
   align-items: center;
   cursor: pointer;
+  transition: 0.25s;
 }
 
 /* TODO: Implement custom style for selected list item */
-ul.dynamic_lists > li.selected {
+ul.dynamic_lists > .dynamic_list_item_selected {
+  padding: 10px 10px;
   background-color: white;
-  color: rgb(44, 49, 67);
+  color: #30304b;
 }
