--- a/src/components/Board/Board.module.css
+++ b/src/components/Board/Board.module.css
@@ -9,3 +9,19 @@
   font-size: 25px;
   padding: 20px 0px 0px 20px;
 }
+
+.todoItem {
+  max-width: 100%;
+  margin: 5px 20px;
+  padding: 12px;
+  background-color: #e8f1ff;
+  border-radius: 5px;
+  border: 1px solid #5d86ab6e;
+  font-size: 1.2rem;
+  font-family: "Inter", sans-serif;
+  cursor: pointer;
+}
+
+.todoItem:hover {
+  background-color: #d4e7ff;
+}
