--- a/src/components/Modals/TodoDetailsModal/TodoDetailsModal.module.css
+++ b/src/components/Modals/TodoDetailsModal/TodoDetailsModal.module.css
@@ -1,5 +1,5 @@
 .todoDetailsModal {
-  background-color: #cbddff;
+  background-color: #ebf2ff;
   border-radius: 10px;
   width: 550px;
   min-height: 500px;
@@ -7,8 +7,46 @@
   position: relative;
 }
 
-/* welcome modal backdrop */
+/* todo details modal backdrop */
 .todoDetailsModal::backdrop {
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(5px);
+}
+
+.topFlexContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  /* border-bottom: 1px solid #b0c4de; */
+}
+
+.editTodoHeading {
+  font-size: 1.5rem;
+  font-weight: 600;
+  font-family: Inter, sans-serif;
+}
+
+.todoTitleTextField {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.formElement {
+  margin-top: 7px !important;
+  margin-bottom: 7px !important;
+}
+
+.dueDatePriorityFlexContainer {
+  display: flex;
+  justify-content: flex-start;
+  gap: 3rem;
+  align-items: center;
+}
+
+.saveButtonFlexContainer {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 10px;
+  margin-top: 1rem;
 }
