--- a/src/components/Modals/TodoDetailsModal/TodoDetailsModal.module.css
+++ b/src/components/Modals/TodoDetailsModal/TodoDetailsModal.module.css
@@ -17,14 +17,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
-  /* border-bottom: 1px solid #b0c4de; */
+  border-bottom: 1px solid #b0c4de;
 }
 
 .editTodoHeading {
   font-size: 1.5rem;
   font-weight: 600;
   font-family: Inter, sans-serif;
+  padding: 10px 0px 10px 5px;
 }
 
 .todoTitleTextField {
@@ -47,6 +47,4 @@
 .saveButtonFlexContainer {
   display: flex;
   justify-content: flex-end;
-  padding-right: 10px;
-  margin-top: 1rem;
 }
