--- a/src/components/Modals/IntroModal/IntroModal.module.css
+++ b/src/components/Modals/IntroModal/IntroModal.module.css
@@ -1,5 +1,5 @@
 .introModal {
-  background-color: #cbddff;
+  background-color: #e2ecff;
   border-radius: 10px;
   width: 550px;
   min-height: 500px;
